--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "schema": "./node_modules/.bin/graphql-codegen",
+    "test": "./node_modules/.bin/jest --forceExit --detectOpenHandles",
+    "build": "./node_modules/.bin/graphql-codegen && tsc && node buildResolver.js",
+    "compile": "tsc",
+    "deploy": "sls deploy -c ./serverless/serverless_appsync.yml"
   },
   "author": "",
   "license": "ISC",
@@ -22,10 +26,18 @@
     "graphql": "^16.5.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
     "promise-mysql": "^5.2.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.20.1",
+    "serverless-appsync-plugin": "^1.13.0",
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript": "^2.4.11",
     "@types/aws-lambda": "^8.10.97",
     "@types/aws-sdk": "^2.7.0",
     "@types/compression": "^1.7.2",
@@ -39,10 +51,13 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.33",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.2",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "babel-jest": "^28.1.0",
     "concurrently": "^7.2.0",
+    "esbuild": "^0.14.41",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
