--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "schema": "./node_modules/.bin/graphql-codegen",
     "test": "./node_modules/.bin/jest --forceExit --detectOpenHandles",
-    "build": "./node_modules/.bin/graphql-codegen && tsc && node buildResolver.js",
+    "build": "./node_modules/.bin/graphql-codegen && tsc",
+    "bundle": "./node_modules/.bin/graphql-codegen && tsc && node buildResolver.js",
     "compile": "tsc",
     "deploy": "sls deploy -c ./serverless/serverless_appsync.yml"
   },
@@ -31,6 +32,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.20.1",
     "serverless-appsync-plugin": "^1.13.0",
+    "typedi": "^0.10.0",
     "winston": "^3.7.2"
   },
   "devDependencies": {
