--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "schema": "./node_modules/.bin/graphql-codegen",
     "test": "./node_modules/.bin/jest --forceExit --detectOpenHandles",
     "build": "./node_modules/.bin/graphql-codegen && tsc",
-    "bundle": "./node_modules/.bin/graphql-codegen && tsc && node buildResolver.js",
+    "bundle": "rm -rf ./dist/* ./bundle/* && ./node_modules/.bin/graphql-codegen && tsc && node buildResolver.js",
     "compile": "tsc",
-    "deploy": "sls deploy -c ./serverless/serverless_appsync.yml"
+    "deploy": "sls deploy -c ./serverless/serverless_appsync.yml",
+    "clean": "rm -rf ./dist/* ./bundle/*"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "apollo-server-express": "^3.7.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1142.0",
+    "axios": "^0.27.2",
     "body-parser-graphql": "^1.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -42,6 +44,7 @@
     "@graphql-codegen/typescript": "^2.4.11",
     "@types/aws-lambda": "^8.10.97",
     "@types/aws-sdk": "^2.7.0",
+    "@types/axios": "^0.14.0",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
