Add query "me" of userResolver

--- a/serverless/serverless_appsync.yml
+++ b/serverless/serverless_appsync.yml
@@ -64,6 +64,11 @@ custom:
         request: false
         response: false
       - dataSource: userResolverDataSource
+        type: Query
+        field: me
+        request: false
+        response: false
+      - dataSource: userResolverDataSource
         type: Mutation
         field: addUser
         request: false
