--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "schema": "./node_modules/.bin/graphql-codegen",
     "test": "./node_modules/.bin/jest --forceExit --detectOpenHandles",
     "build": "./node_modules/.bin/graphql-codegen && tsc",
-    "bundle": "rm -rf ./dist/* ./bundle/* && ./node_modules/.bin/graphql-codegen && tsc && node buildResolver.js",
+    "bundle": "rm -rf ./dist/* ./bundle/* && ./node_modules/.bin/graphql-codegen && tsc && node buildResolver.js && node buildHandler.js",
     "compile": "tsc",
     "deploy": "sls deploy -c ./serverless/serverless_appsync.yml",
     "clean": "rm -rf ./dist/* ./bundle/*"
@@ -74,6 +74,7 @@
     "prettier": "^2.6.2",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.6.4"
   }
 }
