Added successful bid added scheduler handler : retrieve ending soon items and send to queue

--- a/serverless/serverless_appsync.yml
+++ b/serverless/serverless_appsync.yml
@@ -107,6 +107,11 @@ custom:
         response: false
       - dataSource: itemResolverDataSource
         type: Query
+        field: getEndingSoonItems
+        request: false
+        response: false
+      - dataSource: itemResolverDataSource
+        type: Query
         field: getCategoryList
         request: false
         response: false
