--- a/package.json
+++ b/package.json
@@ -10,71 +10,60 @@
     "bundle": "rm -rf ./dist/* ./bundle/* && ./node_modules/.bin/graphql-codegen && tsc && node buildResolver.js && node buildHandler.js",
     "compile": "tsc",
     "deploy": "sls deploy -c ./serverless/serverless_appsync.yml",
-    "clean": "rm -rf ./dist/* ./bundle/*"
+    "clean": "rm -rf ./dist/* ./bundle/*",
+    "deploy-appsync": "cp ./serverless/serverless_appsync.yml ./serverless.yml && sls deploy",
+    "deploy-queue": "cp ./serverless/serverless_queueH.yml ./serverless.yml && sls deploy",
+    "deploy-scheduler": "cp ./serverless/serverless_scheduler.yml ./serverless.yml && sls deploy"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@graphql-tools/schema": "^8.3.11",
-    "@graphql-tools/utils": "^8.6.10",
-    "apollo-server-express": "^3.7.0",
+    "@graphql-tools/schema": "^8.5.0",
+    "@graphql-tools/utils": "^8.8.0",
     "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1142.0",
+    "aws-sdk": "^2.1164.0",
     "axios": "^0.27.2",
     "body-parser-graphql": "^1.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "firebase-admin": "^11.0.0",
     "graphql": "^16.5.0",
-    "lodash": "^4.17.21",
-    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "promise-mysql": "^5.2.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.20.1",
+    "sequelize": "^6.21.2",
+    "serverless": "^3.19.0",
     "serverless-appsync-plugin": "^1.13.0",
-    "typedi": "^0.10.0",
-    "winston": "^3.7.2"
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typescript": "^2.4.11",
-    "@types/aws-lambda": "^8.10.97",
+    "@graphql-codegen/typescript": "^2.5.1",
+    "@types/aws-lambda": "^8.10.101",
     "@types/aws-sdk": "^2.7.0",
     "@types/axios": "^0.14.0",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
     "@types/http-errors": "^1.8.2",
-    "@types/jest": "^27.5.1",
-    "@types/knex": "^0.16.1",
-    "@types/lodash": "^4.14.182",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.33",
-    "@types/supertest": "^2.0.12",
-    "@types/validator": "^13.7.2",
-    "@types/winston": "^2.4.4",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "babel-jest": "^28.1.0",
-    "concurrently": "^7.2.0",
-    "esbuild": "^0.14.41",
-    "eslint": "^8.15.0",
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
+    "babel-jest": "^28.1.1",
+    "esbuild": "^0.14.47",
+    "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "graphql-import": "^1.0.2",
-    "graphql-import-node": "0.0.5",
-    "jest": "^28.1.0",
-    "nodemon": "^2.0.16",
-    "prettier": "^2.6.2",
-    "supertest": "^6.2.3",
-    "ts-jest": "^28.0.2",
+    "eslint-plugin-prettier": "^4.1.0",
+    "graphql-import-node": "^0.0.5",
+    "jest": "^28.1.1",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.4"
   }
 }
