Added push notifcation : notifyEndingSoon, notifySuccessfulBid

--- a/serverless/serverless_scheduler.yml
+++ b/serverless/serverless_scheduler.yml
@@ -55,9 +55,16 @@ functions:
     name: bidit-bidScheduleHandler
     events:
       - schedule:
-          name: retrieveEndingSoonItem
+          name: retrieveSuccessfulBid
           description: every 3minutes
           rate: rate(3 minutes)
+          enabled: true
+          input:
+            command: "retrieveEndingSoonItem"
+      - schedule:
+          name: retrieveEndingSoonItem
+          description: every 10minutes
+          rate: rate(10 minutes)
           enabled: true
           input:
             command: "retrieveEndingSoonItem"
