--- a/serverless/serverless_scheduler.yml
+++ b/serverless/serverless_scheduler.yml
@@ -68,6 +68,13 @@ functions:
           enabled: true
           input:
             command: "retrieveEndingSoonItem"
+      - schedule:
+          name: retrieveFailureItem
+          description: every 3minutes
+          rate: rate(3 minutes)
+          enabled: true
+          input:
+            command: "retrieveFailureItem"
     maximumRetryAttempts: 0
     package:
       include:
