--- a/serverless/serverless_appsync.yml
+++ b/serverless/serverless_appsync.yml
@@ -53,6 +53,7 @@ custom:
       - src/schema/KakaoAccount.graphql
       - src/schema/Bidding.graphql
       - src/schema/Penalty.graphql
+      - src/schema/Alarm.graphql
     lambdaAuthorizerConfig:
       functionName: authResolver
     dataSources:
