--- a/codegen.yml
+++ b/codegen.yml
@@ -7,6 +7,7 @@ schema:
   - src/schema/Bidding.graphql
   - src/schema/Penalty.graphql
   - src/schema/Alarm.graphql
+  - src/schema/AppleAccount.graphql
 
 generates:
   ./src/types/schema/index.ts:
