--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@graphql-tools/schema": "^8.5.0",
     "@graphql-tools/utils": "^8.8.0",
+    "apple-signin-auth": "^1.7.4",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1164.0",
     "axios": "^0.27.2",
