BID-3 Implememt Dibs query of graphQL

--- a/codegen.yml
+++ b/codegen.yml
@@ -8,6 +8,7 @@ schema:
   - src/schema/Penalty.graphql
   - src/schema/Alarm.graphql
   - src/schema/AppleAccount.graphql
+  - src/schema/Dibs.graphql
 
 generates:
   ./src/types/schema/index.ts:
