--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "schema": "./node_modules/.bin/graphql-codegen",
-    "test": "./node_modules/.bin/jest --forceExit --detectOpenHandles",
+    "test": "./node_modules/.bin/ts-node ./node_modules/.bin/jest --forceExit --detectOpenHandles",
     "build": "./node_modules/.bin/graphql-codegen && tsc",
     "bundle": "rm -rf ./dist/* ./bundle/* && ./node_modules/.bin/graphql-codegen && tsc && node buildResolver.js && node buildHandler.js",
     "compile": "tsc",
@@ -52,6 +52,7 @@
     "@types/http-errors": "^1.8.2",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
+    "@types/rewire": "^2.5.28",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "babel-jest": "^28.1.1",
@@ -63,7 +64,9 @@
     "graphql-import-node": "^0.0.5",
     "jest": "^28.1.1",
     "prettier": "^2.7.1",
+    "rewire": "^6.0.0",
     "ts-jest": "^28.0.5",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
